fix: 修复ava数据转换节点重复问题，selector添加z-index

--- a/res/css/component.css
+++ b/res/css/component.css
@@ -77,6 +77,7 @@ div.seletor{
 }
 
 div.seletor ul.seletor-list{
+    z-index: 1;
     background-color: #fff;
     outline: auto;
     position: absolute;
